[bdist_wheel]
universal = 1

[metadata]
name = ipfinder
description = ipfinder: IPFinder Python Client Library
long_description = file: README.md
url = https://docs.pytest.org/en/latest/
project_urls =
    Source=https://github.com/ipfinder-io/ip-finder-python
    Tracker=https://github.com/ipfinder-io/ip-finder-python/issues

author = Mohamed Ben rebia
platform = any
license = Apache License 2.0
license_file = LICENSE
keywords = ipfinder, IPV4, IPV6, ASN, Firewall , Domain

[options]

python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
packages = find:
install_requires=
    requests
    tox
    pytest
